--- a/index.html
+++ b/index.html
@@ -1646,6 +1646,7 @@ are fairly flat with the possible exception of the spring trend. <br>
 The point estimates of the annual trends are listed in the table below.
 <br></p>
 <div align="center">
+
 <table style="text-align:center">
 <caption>
 <strong>Oregon Precipitation Trends by Season Since 1921</strong>
@@ -1678,16 +1679,20 @@ Precipitation in Inches
 <td style="text-align:left">
 </td>
 <td>
-Fall
+<ol style="list-style-type: decimal">
+<li>Fall
 </td>
 <td>
-Winter
+<ol start="2" style="list-style-type: decimal">
+<li>Winter
 </td>
 <td>
-Spring
+<ol start="3" style="list-style-type: decimal">
+<li>Spring
 </td>
 <td>
-Summer
+<ol start="4" style="list-style-type: decimal">
+<li>Summer
 </td>
 </tr>
 <tr>
@@ -1775,7 +1780,7 @@ Observations
 </tr>
 </table>
 </div>
-<p><br> Table 2 shows that only spring trend is significantly different
+<br> Table 2 shows that only spring trend is significantly different
 from zero. I can conclude, therefore, that there has not been a
 significant change in the precipitation trends for summer, fall or
 winter. The annual trend for spring, on the other hand, is robust enough
@@ -1787,7 +1792,11 @@ fact, there is a robust positive precipitation trend for spring. These
 findings also seem to contradict the perception of a dryer Oregon.
 However, seasonal trends still do not consider all the possible
 precipitation variation in Oregon. To get a fuller picture, I also look
-at precipitation trends in Oregon’s sub-climates. <br> <br></p>
+at precipitation trends in Oregon’s sub-climates. <br> <br></li>
+</ol></li>
+</ol></li>
+</ol></li>
+</ol>
 </div>
 <div id="climate-divisions-and-precipitation" class="section level2">
 <h2>Climate Divisions and Precipitation</h2>
@@ -2146,6 +2155,7 @@ To get a broad overview of how seasonality and climate variation
 interact, I grouped climate divisions accordingly into Eastern and
 Western Oregon and estimated seasonal trends as shown below. <br></p>
 <div align="center">
+
 <table style="text-align:center">
 <caption>
 <strong>Seasonal Precipitation Trends For Divisions West of Cascades
@@ -2179,16 +2189,20 @@ Precipitation in Inches
 <td style="text-align:left">
 </td>
 <td>
-West Winter
+<ol style="list-style-type: decimal">
+<li>West Winter
 </td>
 <td>
-West Spring
+<ol start="2" style="list-style-type: decimal">
+<li>West Spring
 </td>
 <td>
-West Summer
+<ol start="3" style="list-style-type: decimal">
+<li>West Summer
 </td>
 <td>
-West Fall
+<ol start="4" style="list-style-type: decimal">
+<li>West Fall
 </td>
 </tr>
 <tr>
@@ -2275,7 +2289,11 @@ Observations
 </td>
 </tr>
 </table>
-<p><br></p>
+<br></li>
+</ol></li>
+</ol></li>
+</ol></li>
+</ol>
 <table style="text-align:center">
 <caption>
 <strong>Seasonal Precipitation Trends For Divisions East of Cascades
@@ -2309,16 +2327,20 @@ Precipitation in Inches
 <td style="text-align:left">
 </td>
 <td>
-East Winter
+<ol style="list-style-type: decimal">
+<li>East Winter
 </td>
 <td>
-East Spring
+<ol start="2" style="list-style-type: decimal">
+<li>East Spring
 </td>
 <td>
-East Summer
+<ol start="3" style="list-style-type: decimal">
+<li>East Summer
 </td>
 <td>
-East Fall
+<ol start="4" style="list-style-type: decimal">
+<li>East Fall
 </td>
 </tr>
 <tr>
@@ -2406,12 +2428,16 @@ Observations
 </tr>
 </table>
 </div>
-<p><br> These seasonal trends mostly mirror the broader trends of Oregon
-as a whole. Western Oregon has a statistically significant positive
-trend in spring. Eastern Oregon has a similar trend, although it is
-smaller in magnitude. In general it appears like Eastern and Western
-Oregon have experienced similar trends in seasonality as Oregon as a
-whole. <br> <br> <br></p>
+<br> These seasonal trends mostly mirror the broader trends of Oregon as
+a whole. Western Oregon has a statistically significant positive trend
+in spring. Eastern Oregon has a similar trend, although it is smaller in
+magnitude. In general it appears like Eastern and Western Oregon have
+experienced similar trends in seasonality as Oregon as a whole. <br>
+<br> <br></li>
+</ol></li>
+</ol></li>
+</ol></li>
+</ol>
 </div>
 </div>
 <div id="trends-in-snowfall-vs-rainfall" class="section level1">
